--- a/javascript/sort.html
+++ b/javascript/sort.html
@@ -23,8 +23,8 @@
 
         sort(narr, (n,m)=>n-m);        
         console.log(narr);
-        sort(narr, (n,m)=>m-n);
-        console.log(narr);
+        // sort(narr, (n,m)=>m-n);
+        // console.log(narr);
 
         let pers1 = [{name:'aong',age:40, addr:'seoul'},
                     {name:'bong',age:50, addr:'incheon'},
